feat: restructure worker and ci
